# nea

./: Cargo.toml  README.md
src/: linearmotion.rs  main  main.rs  rotations.rs
theory/: goals.rs
